--- a/validacaoDeFormCustomizada/style.css
+++ b/validacaoDeFormCustomizada/style.css
@@ -67,6 +67,7 @@ button {
 
   color: var(--text-color);
   font-size: 1em;
+  transition: 0.4s;
 }
 
 button {
@@ -97,6 +98,7 @@ input:valid ~ label {
   padding: 0;
 
   background-color: rgba(255, 0, 0, 0.2);
+  transition: 1s;
 }
 
 .input span.error.active {
